Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.14.0-beta1
-
None
Description
The examples and marketplace pages show images that are decoded from data buffers. This currently happens without specifying the encoding format, which triggers image auto-detection.
This auto-detection adds a certainly negligible overhead. However, it can trigger warnings such as https://codereview.qt-project.org/c/qt/qtimageformats/+/316182 while probing the different QImageIOHandlers.
Since we have URLs incl. the filename for the image data, we can extract the suffix as image format and use that when loading an image form buffer.