src/plugins/marketplace/productlistmodel.cpp
@@ -33,6 +33,7 @@
 #include <utils/qtcassert.h>
 
 #include <QDesktopServices>
+#include <QFileInfo>
 #include <QJsonArray>
 #include <QJsonDocument>
 #include <QJsonObject>
@@ -380,7 +381,8 @@ void SectionedProducts::onImageDownloadFinished(QNetworkReply *reply)
     if (reply->error() == QNetworkReply::NoError) {
         const QByteArray data = reply->readAll();
         QPixmap pixmap;
-        if (pixmap.loadFromData(data)) {
+        const QString imageFormat = QFileInfo(reply->request().url().fileName()).suffix();
+        if (pixmap.loadFromData(data, imageFormat.toLatin1())) {
             const QString url = reply->request().url().toString();
             QPixmapCache::insert(url, pixmap.scaled(ProductListModel::defaultImageSize,
                                                     Qt::KeepAspectRatio, Qt::SmoothTransformation));
